0.13 to current

	Changed --with-gtk flag to --with-glib (old name is still available).  GTK
	was pulled in by mistake, only GIO/GLib was ever used...

	Added command-line history to menu mode.

	Added "mchistory" value to 'vifminfo' and 'sessionoptions' option.  It
	manages storing of command-line history of menus.

	Added ":history mcmd" menu for displaying command-line history of menus.

	Added :col[der] and :cnew[er] commands to menu mode to traverse history of
	navigation menus.

	Added :chi[story] command that opens a menu of saved menus.

	Added :chi[story] command to menu mode.

	Added 'hloptions' option to configure which columns get colored.  Thanks to
	qsmodo.

	Added "column:{name}" form of argument to :highlight command to specify
	style of a separate column.  Thanks to Anton Gepting.

	Added "millersep:" value to 'fillchars' that allows customizing the border
	between miller columns.  Thanks to Shuo (a.k.a. shenqshuoh).

	Added :gr[ep] command to menu mode.  Allows (re)running grep command
	on the same set of files without leaving the mode.

	Added :fin[d] command to menu mode.  Allows (re)running find command
	on the same set of files without leaving the mode.

	Added middle view column alignment (specified by "^" in 'viewcolumns'
	option).  Part of the text is replaced with ellipsis to keep both start
	and end visible.  Patch by Vadim Curcă.

	Don't draw right padding on a truncated rightmost column of a transposed
	ls-like view.

	Made register's content being listed in normal rather then reversed order
	in :registers/:display menu.

	Don't even try to clear graphics when menu-like mode is active.  The
	graphics should have been hidden on entering the mode.

	Allowed wild menu popup to take up up to 40% of the screen.

	Made documentation of 'vifminfo' more readable.

	Rewrote "Menus and dialogs" part of the documentation.

	Increase line length limit used during formatting output of :highlight
	command to allow longer strings.
