@@ -3,6 +3,10 @@
 	Changed --with-gtk flag to --with-glib (old name is still available).  GTK
 	was pulled in by mistake, only GIO/GLib was ever used...
 
+	Change %N macro to not be mutually exclusive with most of other
+	macros (it wasn't documented and didn't make much sense).  Thanks to James
+	Dietrich.
+
 	Added command-line history to menu mode.
 
 	Added "mchistory" value to 'vifminfo' and 'sessionoptions' option.  It
